--- a/src/app/auth/cadastro/cadastro.component.html
+++ b/src/app/auth/cadastro/cadastro.component.html
@@ -1,1 +1,70 @@
-<p>cadastro works!</p>
+<mat-grid-list cols="2" style="padding-top: 3%;">
+    <mat-grid-tile rowspan="1">
+        <img class="foto1" [src]="imagem" alt="">
+    </mat-grid-tile>
+
+    <mat-grid-tile class="container" rowspan="1">
+        <div class="form-wrapper container">
+            <h2><strong>Cadastro</strong></h2>
+
+                <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
+
+                        <ng-template>Nome</ng-template>
+                        <mat-form-field appearance="fill">
+                            <mat-label>Nome</mat-label>
+                            <input matInput placeholder="Seu nome" formControlName="nome" required />
+                            <mat-error *ngIf="signupForm.get('nome')?.errors?.['required']">Campo obrigatório</mat-error>
+                            <mat-icon matPrefix>person</mat-icon>
+                        </mat-form-field>
+                       
+                        
+                        <ng-template >Apelido</ng-template>
+                        <mat-form-field appearance="fill">
+                            <mat-label>Apelido</mat-label>
+                            <input matInput placeholder="Ex: Apreciador de cuscuz" formControlName="nick" required />
+                            <mat-error *ngIf="signupForm.get('nick')?.errors?.['required']">Campo obrigatório</mat-error>
+                            <mat-icon matPrefix>person</mat-icon>
+                        </mat-form-field>
+                        
+
+                        <ng-template >Email</ng-template>
+                        <mat-form-field appearance="fill">
+                            <mat-label>Email</mat-label>
+                            <input matInput placeholder="Seu email" formControlName="email" required />
+                            <mat-error *ngIf="signupForm.get('email')?.errors?.['required']">Campo obrigatório</mat-error>
+                            <mat-error *ngIf="signupForm.get('email')?.errors?.['email']">Email inválido</mat-error>
+                            <mat-icon >email</mat-icon>
+                        </mat-form-field>
+                     
+
+                        <ng-template >Senha</ng-template>
+                        <mat-form-field appearance="fill">
+                            <mat-label>Senha</mat-label>
+                            <input matInput placeholder="Sua senha" formControlName="senha" type="password" required />
+                            <mat-error *ngIf="signupForm.get('senha')?.errors?.['required']">Campo obrigatório</mat-error>
+                            <mat-error *ngIf="signupForm.get('senha')?.errors?.['minlength']">O mínimo são 8 caracteres
+                            </mat-error>
+                            <mat-icon matPrefix>key</mat-icon>
+                        </mat-form-field>
+                     
+
+                        <ng-template >Confirmar Senha</ng-template>
+                        <mat-form-field appearance="fill">
+                            <mat-label>Confirmar senha</mat-label>
+                            <input matInput placeholder="Confirmar senha" formControlName="confirma_senha" type="password" />
+                            <mat-icon matPrefix>key</mat-icon>
+                        </mat-form-field>
+                        <span class="mat-error" *ngIf="signupForm.errors?.['matchPasswords'] && signupForm.get('confirma_senha')?.touched">
+                            As senhas não correspondem
+                        </span>
+                       
+
+                        <button type="submit" class="btnLoginBG" mat-raised-button (click)="onSubmit()" [disabled]="signupForm.invalid">
+                            Cadastrar
+                        </button>
+
+
+                </form>
+        </div>
+    </mat-grid-tile>
+</mat-grid-list>
