--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,13 +1,16 @@
 <div class="forme-wrapper col-12" >
     <mat-grid-list cols="2">
-    
+        <mat-grid-tile rowspan="1">
+            <img class="foto1" [src]="imagem" alt="">
+        </mat-grid-tile>
+
         <mat-grid-tile>
             <div class="container">
                 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     
                     <h2 style="margin-left:40%;"><strong>Login</strong></h2>
     
-                    <mat-form-field appearance="fill" style="width: 100%;">
+                    <mat-form-field appearance="fill" class="escrita" >
                         <mat-label>Email</mat-label>
                         <input matInput placeholder="Seu email" formControlName="email" required>
                         <mat-error *ngIf="loginForm.get('email')?.errors?.['required']">Campo obrigatório</mat-error>
@@ -15,7 +18,7 @@
                         <mat-icon matPrefix>person</mat-icon>
                     </mat-form-field>
 
-                    <mat-form-field appearance="fill" style="width: 100%;">
+                    <mat-form-field appearance="fill" class="escrita">
                         <mat-label>Senha</mat-label>
                         <input matInput placeholder="Sua senha" formControlName="senha" [type]="hide ? 'password' : 'text'"
                             required>
@@ -28,18 +31,8 @@
                         <mat-icon matPrefix>key</mat-icon>
                     </mat-form-field>
     
-                    <div style="margin-left: 30%; margin-bottom: 3%;">
-                        <a routerLink="/recuperar-senha">Esqueci minha senha</a>
-                    </div>
-    
-                    <button class="btnLoginBG" mat-raised-button color="primary"
+                    <button type="submit" class="btnLoginBG" mat-raised-button color="primary"
                         [disabled]="loginForm.invalid">Login</button>
-    
-                    <span id="elementLine" style="margin-left:48%; margin-bottom: 3%;">ou</span>
-
-    
-
-    
                 </form>
     
             </div>
