--- a/src/app/auth/cadastro/cadastro.component.scss
+++ b/src/app/auth/cadastro/cadastro.component.scss
@@ -1,66 +1,35 @@
+.foto1{
+    width: 75%;
+    height: 75%;
+    object-fit: cover;
+    margin: 25px 0 25px 15px;
+    border-radius: 6px;
+}
 
 .container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
-    width: 20%;
-    // height: 50%;
-
-    margin-top: 6%;
-    background-color: #333333;
+    font-family: 'Joan', serif;
+    color: #fff;
+    background-color: #7B1FA2;
     border-radius: 6px;
-  
+    width: 75%;
+    height: 75%;  
 }
 
+.escrita{
+    width: 60%;
+    margin-left: 20%;
+    }
+
+button {
+    width: 30%;
+    margin-left: 34%;
+    margin-bottom: 10px;
+}
 
 .btnLoginBG {
-    background-color:#458AF1;
-    width: 100%;
-    text-align: center;
-    margin-top: 2%;
-    margin-bottom: 2%;
-    color: white;
-}
-
-.btnLoginBG2{
- 
-    width: 100%;
-    text-align: center;
-    margin-top: 2%;
-    margin-bottom: 3%;
-  
-
- 
-}
-
-.btnLoginBG3{
-    background-color:#3F51B5;
-    width: 100%;
-    text-align: center;
- 
-    color: white;
-
-    margin-bottom:50%; 
-    margin-top: 2%;
-
-}
-
-
-
-
-
-
-.foto1{
-    width: 80%;
-    height: 80%;
-    object-fit: cover;
-    margin-top: 25px;
-    margin-bottom: 25px;
-    margin-left: 15px;
-    border-radius: 6px;
-}
-.text{
-    margin-left: 40%;
+    background-color:#8b4da5;
 }
