--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -31,7 +31,7 @@
                         <mat-icon matPrefix>key</mat-icon>
                     </mat-form-field>
     
-                    <button type="submit" class="btnLoginBG" mat-raised-button color="primary"
+                    <button type="submit" [routerLink]="['/listagem-cursos']" class="btnLoginBG" mat-raised-button color="primary"
                         [disabled]="loginForm.invalid">Login</button>
                 </form>
     
