--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -1,7 +1,3 @@
-.forme-wrapper{
-    background-color: #383c42;
-}
-
 .foto1{
     width: 75%;
     height: 75%;
@@ -9,6 +5,21 @@
     margin: 25px 0 25px 15px;
     border-radius: 6px;
 }
+
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Joan', serif;
+    color: #fff;
+    background-color: #7B1FA2;
+    border-radius: 6px;
+    width: 75%;
+    height: 75%;
+}
+
 .escrita{
 width: 60%;
 margin-left: 20%;
@@ -19,24 +30,7 @@ button {
     margin-left: 34%;
     margin-bottom: 10px;
 }
-.container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-family: 'Joan', serif;
-    color: #458AF1;
-    background-color: #531f4b;
-
-}
-
 
 .btnLoginBG {
-    background-color:#458AF1;
-}
-
-.form {
-    padding-right: 10%;
-    justify-content: center;
-    margin: auto;
+    background-color:#8b4da5;
 }
