--- a/src/app/cursos/listagem-cursos/listagem-cursos.component.html
+++ b/src/app/cursos/listagem-cursos/listagem-cursos.component.html
@@ -1,1 +1,13 @@
-<p>listagem-cursos works!</p>
+<button [routerLink]="['/adicao-cursos']" mat-stroked-button color="warn">adicionar</button>
+<div class="cards" *ngFor="let curso of cursos">
+  <mat-card class="example-card">
+  <mat-card-header>
+    <mat-card-title>{{curso.nome}}</mat-card-title>
+    <mat-card-subtitle>{{curso.duracao}}</mat-card-subtitle>
+  </mat-card-header>
+  <img mat-card-image src="{{curso.imagem}}">
+  <mat-card-content>{{curso.descricao}}</mat-card-content>
+  <mat-card-actions>
+  </mat-card-actions>
+</mat-card>
+</div>
