--- a/src/app/core/loader/loader.component.html
+++ b/src/app/core/loader/loader.component.html
@@ -1,1 +1,4 @@
-<p>loader works!</p>
+<div class="loader-wrapper">
+    <mat-spinner color="accent"></mat-spinner>
+    <h3 *ngIf="label">{{label}}</h3>
+</div>
