--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -8,6 +8,7 @@
         <button mat-menu-item [routerLink]="['/listagem-cursos']">Cursos</button>
         <button mat-menu-item [routerLink]="['/login']">Login</button>
         <button mat-menu-item [routerLink]="['/cadastro']">Cadastro</button>
+        <button mat-menu-item [routerLink]="['/adicao-cursos']">Adicionar</button>
       </mat-menu>
       <mat-icon>menu</mat-icon>
     </button>
