--- a/src/app/cursos/listagem-cursos/listagem-cursos.component.scss
+++ b/src/app/cursos/listagem-cursos/listagem-cursos.component.scss
@@ -1,8 +1,14 @@
 .cards {
-  width: 20%;
-  margin-left: 2%;
-  display: flex;
-  flex-direction: row;
-  padding: 15px;
+  width: 418px;
+  height: 390px;
+}
 
+.container {
+  padding: 160px;
+  margin-top: -350px;
+}
+
+.img {
+  width: 450px; 
+  height: 300px;
 }
