--- a/src/app/cursos/adicao-cursos/adicao-cursos.component.scss
+++ b/src/app/cursos/adicao-cursos/adicao-cursos.component.scss
@@ -1,3 +1,18 @@
-.fundo{
-    background-color: green;
+.fundo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Joan', serif;
+    color: #fff;
+    background-color: #7B1FA2;
+    border-radius: 6px;
+    width: 50%;
+    height: 100%;
+    margin-top: 60px;
+    margin-left: 350px;
+}
+
+button {
+    width: 20%;
 }
