--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -32,7 +32,7 @@
                     </mat-form-field>
     
                     <button type="submit" [routerLink]="['/listagem-cursos']" class="btnLoginBG" mat-raised-button color="primary"
-                        [disabled]="loginForm.invalid">Login</button>
+                        [disabled]="loginForm.invalid" (click)="onSubmit()">Login</button>
                 </form>
     
             </div>
